objects/natterbox__nbCallCenterConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Natterbox Call Center configuration settings. These settings are hierarchical - organisation-wide defaults can be overridden for different Profiles or different individual Users.</description>
    <fields>
        <fullName>natterbox__CTI_Service_Host__c</fullName>
        <defaultValue>&quot;https://cti.redmatter.com&quot;</defaultValue>
        <description>Name of the notifier host that the CTI app should connect to.</description>
        <label>CTI Service Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>natterbox__Call_List_Template_2__c</fullName>
        <description>Continuation of call list template if the template is too big to fit in a single field (255 chararacters maximum)</description>
        <label>Call List Template 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Call_List_Template_3__c</fullName>
        <description>Continuation of template from call list template 2</description>
        <label>Call List Template 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Call_List_Template_4__c</fullName>
        <description>Continuation of template from call list template 3</description>
        <label>Call List Template 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Call_List_Template__c</fullName>
        <description>Use this field to customize the recent call list in the CTI user interface</description>
        <label>Call List Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Callback_Post_Call_Action__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Callback Task Post Call Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Callback_Template_2__c</fullName>
        <label>Custom Callback Template 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Callback_Template_3__c</fullName>
        <label>Custom Callback Template 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Callback_Template_4__c</fullName>
        <label>Custom Callback Template 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Callback_Template__c</fullName>
        <label>Custom Callback Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Log_Template_2__c</fullName>
        <description>Continuation of template for customization of Logging. Space in this field is limited to 255 characters. If more is required, overflow into Custom Log Template 3</description>
        <label>Custom Log Template 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Log_Template_3__c</fullName>
        <description>Continuation of template for customization of Logging.</description>
        <label>Custom Log Template 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Log_Template_4__c</fullName>
        <description>Continuation of template for customization of Logging.</description>
        <label>Custom Log Template 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Custom_Log_Template__c</fullName>
        <description>Template for customization of Logging. Space in this field is limited to 255 characters. If more is required, overflow into Custom Log Template 2</description>
        <label>Custom Log Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Disable_Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, UI for creating a callback task from call wrapup is hidden.</description>
        <inlineHelpText>Check this to hide fields during wrapup for creating a callback task.</inlineHelpText>
        <label>Disable Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Disable_Withhold_Caller_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, &apos;Withhold my caller ID&apos; is not shown in the UI as an option under &apos;My caller ID&apos;</description>
        <label>Disable Withhold Caller ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Disable_wrapup_for_unknown_numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable notes and wrap-up for numbers not found in SalesForce</description>
        <label>Disable wrapup for unknown numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Display_Recording_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, users will see a &apos;this call is being recorded&apos; UI displayed in their CTI user interface</description>
        <inlineHelpText>If checked, users will see a &apos;this call is being recorded&apos; UI displayed in their CTI user interface</inlineHelpText>
        <label>Display Recording UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Enable_Wrapup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, users will be required to add a wrapup code and log message for each call.</description>
        <inlineHelpText>Check this to enable wrapup code logging.</inlineHelpText>
        <label>Enable Wrapup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Enable_star_code_buttons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to have selected star code actions appear as buttons in the CTI</description>
        <inlineHelpText>Check this to have selected star code actions appear as buttons in the CTI</inlineHelpText>
        <label>Enable star code buttons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Groups_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to enable login/logout to/from hunt groups, call queues etc from the CTI</description>
        <inlineHelpText>Check this box to enable login/logout to/from hunt groups, call queues etc from the CTI</inlineHelpText>
        <label>Groups Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Offer_Skip_Wrapup_Conditions__c</fullName>
        <defaultValue>&quot;never&quot;</defaultValue>
        <description>When should CTI wrapup show the &apos;disregard call&apos; button which when pressed skips logging the call in SF</description>
        <inlineHelpText>When should CTI wrapup show the &apos;disregard call&apos; button which when pressed skips logging the call in SF</inlineHelpText>
        <label>Offer Skip Wrapup Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>natterbox__Outbound_Call_Wrapup_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Prevent making new outbound calls if count of outbound calls in wrapup reach this limit (0 or blank for no limit)</inlineHelpText>
        <label>Outbound Call Wrapup Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>natterbox__Pop_Query__c</fullName>
        <defaultValue>&quot;FIND {%1%} IN PHONE FIELDS&quot;</defaultValue>
        <description>SOSL query to look up salesforce objects that match phone numbers. The phone number in the query will be substituted for the string %1%.</description>
        <label>Pop Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Query_Label_Map__c</fullName>
        <defaultValue>&quot;Account:Name|Contact:FirstName,LastName&quot;</defaultValue>
        <description>This field describes which fields to fetch for different objects (eg account, contact), in the order in which they should be displayed, one object type per line, or separated by the | symbol. Each list item consists of the object type followed by a colon, then a list of object fields to be displayed in the label. Eg: &quot;Account:AccountName|Case:Contact.Name&quot;</description>
        <label>Query label map</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Show_Edit_Wrapup_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the subject of the call to be modified when logged in SF</description>
        <inlineHelpText>Allows the subject of the call to be modified when logged in SF</inlineHelpText>
        <label>Show Edit Wrapup Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Show_Features_Under_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Features Under Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Specify_default_wrapup_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specify default wrapup button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__UpdateLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you are adding logs via your dialplan policy and wish users&apos; wrapup codes and notes to be added to this existing record, check this box. Otherwise the CTI will create its own logs.</description>
        <inlineHelpText>Check this if your dialplan policy is generating logs, or leave unchecked to have the CTI generate its own logs.</inlineHelpText>
        <label>Update Policy Generated Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrap_Call_Info_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wraps call information content across multiple lines</inlineHelpText>
        <label>Wrap Call Info Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Inbound_10__c</fullName>
        <description>Continuation of wrapup codes for inbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Inbound 11</description>
        <label>Wrapup codes (inbound calls) 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Inbound_11__c</fullName>
        <description>Continuation of wrapup codes for inbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Inbound 12</description>
        <label>Wrapup codes (inbound calls) 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Inbound_12__c</fullName>
        <description>Continuation of wrapup codes for inbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Inbound 13</description>
        <label>Wrapup codes (inbound calls) 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Inbound__c</fullName>
        <defaultValue>&quot;Call successful:0,Appointment set:3,Able to pitch:4,Decision maker not reached:5&quot;</defaultValue>
        <description>Wrapup codes to be used in the call logs. Comma or newline separated list of text codes, with a numric identifier appended after a colon, eg: &quot;Call Successful:0,Call Failed:1&quot;</description>
        <label>Wrapup codes (inbound calls)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Outbound_10__c</fullName>
        <description>Continuation of wrapup codes for outbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Outbound 11</description>
        <label>Wrapup codes (outbound calls) 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Outbound_11__c</fullName>
        <description>Continuation of wrapup codes for outbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Outbound 12</description>
        <label>Wrapup codes (outbound calls) 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Outbound_12__c</fullName>
        <description>Continuation of wrapup codes for outbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Outbound 13</description>
        <label>Wrapup codes (outbound calls) 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_Codes_Outbound__c</fullName>
        <defaultValue>&quot;Call successful:0,Left voicemail:1,Appointment set:2,Able to pitch:3,Decision maker not reached:4&quot;</defaultValue>
        <description>Wrapup codes to be used in the call logs. Comma or newline separated list of text codes, with a numric identifier appended after a colon, eg: &quot;Call Successful:1,Call Failed:2&quot;</description>
        <label>Wrapup codes (outbound calls)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>natterbox__Wrapup_and_Notes_available_during_call__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Make the wrapup radio buttons and notes field available during the call instead of just when complete</description>
        <label>Wrapup and Notes available during call</label>
        <type>Checkbox</type>
    </fields>
    <label>Natterbox Call Center</label>
</CustomObject>